tests/snapshots/output_snapshot__salt_pillar_json.snap
---
source: tests/output_snapshot.rs
expression: normalize_uris(&json)
---
{
  "_reclass_": {
    "name": {
      "full": "web-prod-01",
      "short": "web-prod-01"
    },
    "environment": "base"
  },
  "global": {
    "admin": {
      "email": "admin@example.com"
    },
    "timezone": "UTC"
  },
  "environment_name": "production",
  "log_level": "warn",
  "role": "web",
  "webserver": {
    "port": 80,
    "ssl": true
  },
  "hostname": "web-prod-01",
  "ip": "10.0.1.10",
  "__reclass__": {
    "nodename": "web-prod-01",
    "classes": [
      "all",
      "env.production",
      "role.web"
    ],
    "applications": [],
    "environment": "base"
  }
}
